--- a/src/app/meetingList/meetingList.component.html
+++ b/src/app/meetingList/meetingList.component.html
@@ -16,8 +16,11 @@
       </div>
     </div>
     <div class="panel panel-primary tableForm">
-      <div class="panel-heading text-center">Meeting List</div>
-      <input type="text" [(ngModel)]="searchText" (change)="search()" />
+      <div class="panel-heading text-center">
+        <span>
+          <input id="searchTextArea" placeholder="Meeting" type="text" [(ngModel)]="searchText" (ngModelChange)="search()" />
+        </span> Meeting List
+      </div>
       <div class="panel-body">
         <!--Table-->
         <div class="table-responsive">
@@ -43,11 +46,11 @@
                   <span>
                       <button type="button" class="btn btn-lg btn-success createButton" routerLink="/meeting" routerLinkActive="active">
                       <span class="glyphicon glyphicon-flash glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="New meeting"></span>
-                      </button>
-                    <button type="button" id="check" value="Check All Rows" class="btn btn-default btn-lg" (click)="checkAll()">
+                  </button>
+                  <button type="button" id="check" value="Check All Rows" class="btn btn-default btn-lg" (click)="checkAll()">
                       <span class="glyphicon glyphicon-check glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Select All Rows"></span>
                     </button>
-                    <button type="button" class="btn btn-danger btn-lg toDelete" data-toggle="modal" data-target="#deleteModal" >
+                  <button type="button" class="btn btn-danger btn-lg toDelete" data-toggle="modal" data-target="#deleteModal">
                       <span class="glyphicon glyphicon-trash glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Delete"></span>
                   </button>
                   </span>
@@ -58,7 +61,7 @@
               <tr *ngFor="let meeting of meetingList1">
                 <td class="col-md-2 meeting">
                   <span *ngIf="meeting.status != 'Open'">{{meeting.meetingTitle}}</span>
-                   <a *ngIf="meeting.status == 'Open'" href="" routerLink="/meeting" routerLinkActive="active" (click)="edit(meeting.meetingId)" >{{meeting.meetingTitle}}</a>
+                  <a *ngIf="meeting.status == 'Open'" href="" routerLink="/meeting" routerLinkActive="active" (click)="edit(meeting.meetingId)">{{meeting.meetingTitle}}</a>
                 </td>
                 <td class="col-md-2 td">
                   {{meeting.meetingAgenda}}
@@ -73,7 +76,7 @@
                   {{meeting.meetingDate}}
                 </td>
                 <td class="col-md-3">
-                  <input  class="deleteCheckbox" type="checkbox" value="{{meeting.meetingId}}">
+                  <input class="deleteCheckbox" type="checkbox" value="{{meeting.meetingId}}">
                   <button type="button" class="btn btn-default btn-lg floatPosition" (click)="moreDetails(meeting.meetingId)">
                       <span class="glyphicon glyphicon-expand glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Minutes of Meeting"></span>
                   </button>
