--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -1,5 +1,5 @@
 .createButton {
-  float: left;
+  /*float: left;*/
 }
 
 footer {
@@ -22,9 +22,7 @@ footer {
 
 .meetingListModal {
   width: 100% !important;
-  /*background-color: #F7F7F7;*/
   height: 850px;
-
 }
 
 .tableForm {
@@ -92,11 +90,11 @@ table td {
 }
 
 .agenda {
-  width: 20%;
+  width: 25%;
 }
 
 .attendees {
-  width: 20%;
+  width: 25%;
 }
 
 .status {
@@ -108,10 +106,16 @@ table td {
 }
 
 .icons {
-  width: 30%;
+  width: 20%;
 }
 
 .floatPosition {
   float: right;
   margin-right: 5px;
+}
+
+#searchTextArea {
+  color: black;
+  float: left;
+  margin-left: 20px;
 }
