--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,7 @@
 
 <header>
   <div id="logoDetails">
-    <!-- <img style="float:left;" src="./app/images/cybage.jpg"> -->
-    <h1 id="meetingTitle">Minutes Of Meeting</h1>
+    <h1 id="meetingTitle">PROJECT MEETINGS</h1>
   </div>
 </header>
 <section id="errorIdSection">
