--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -7,27 +7,23 @@ footer {
   bottom: 0px;
 }
 
-.tableForm {
-  margin-top: 35px;
-}
-
 .meetingList {
   padding: 10px;
   width: 100% !important;
   margin: 0 auto;
   border-radius: 2px;
-  height: 850px;
-
+  height: 450px;
 }
 
 .meetingListModal {
   width: 100% !important;
-  height: 850px;
+  /*background-color: #F7F7F7;*/
+  height: 499px;
 }
 
 .tableForm {
   width: 100% !important;
-  height: 800px;
+  height: 476px;
   overflow: auto;
 }
 
@@ -90,11 +86,11 @@ table td {
 }
 
 .agenda {
-  width: 25%;
+  width: 22%;
 }
 
 .attendees {
-  width: 25%;
+  width: 22%;
 }
 
 .status {
@@ -106,7 +102,7 @@ table td {
 }
 
 .icons {
-  width: 20%;
+  width: 26%;
 }
 
 .floatPosition {
@@ -114,8 +110,7 @@ table td {
   margin-right: 5px;
 }
 
-#searchTextArea {
-  color: black;
-  float: left;
-  margin-left: 20px;
+.search {
+  margin-top: 10px;
+  margin-left: 10px;
 }
