--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -1,5 +1,5 @@
 .createButton {
-  /*float: left;*/
+  float: right;
 }
 
 footer {
@@ -39,6 +39,7 @@ footer {
 
 .btn-lg {
   font-size: 10px;
+  margin: 0px 5px;
 }
 
 .glyphiconIcon {
@@ -51,7 +52,7 @@ footer {
 
 input[type="checkbox"] {
   transform: scale(2);
-  margin: 15px 15px;
+  margin: 15px 23px;
   float: right;
 }
 
@@ -118,4 +119,25 @@ table td {
   color: black;
   float: left;
   margin-left: 20px;
+}
+
+.notificationArea {
+  display: none;
+  padding: 20px;
+  background-color: #4CAF50;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+
+#notificationText {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
 }
