--- a/src/app/moreDetails/moreDetails.component.html
+++ b/src/app/moreDetails/moreDetails.component.html
@@ -169,7 +169,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let meeting of moreDetailsHistoryList">
-                    <td>
+                    <td class="centreTh">
                       <span>{{meeting.dateStamp}}&nbsp;&nbsp;&nbsp;&nbsp;{{meeting.timeStamp}}</span>
                     </td>
                     <td class="centreTh">
