--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@ footer {
   position: absolute;
   bottom: 0px;
   margin: 0px auto;
-  width:100%;
+  width: 100%;
   border-bottom: 1px solid black;
   border-left: 1px solid black;
   border-right: 1px solid black;
@@ -51,6 +51,11 @@ header {
   font-size: 15px;
   margin: 15px 20px;
   color: red;
+}
+#successId {
+  font-size: 15px;
+  margin: 15px 20px;
+  color: green;
 }
 .links {
   background-color: rgba(36, 62, 77, 1);
