--- a/src/app/meeting/meeting.component.html
+++ b/src/app/meeting/meeting.component.html
@@ -11,6 +11,7 @@
             <div [hidden]="id.valid || id.pristine" class="alert alert-danger">Meeting ID is required</div>
           </div>
         </div>
+          <span id="openStatus"></span>
       </div>
         <div class="form-group row">
 
@@ -164,6 +165,8 @@
             <button type="button" class="btn btn-danger btn-md addButton" routerLink="/meetingList" routerLinkActive="active">
                           Cancel        <span class="glyphicon glyphicon-remove" aria-hidden="true" data-toggle="tooltip" title="Go Back to List"></span>
             </button>
+
+          
           </div>
         </div>
       </form>
