--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,7 @@
 </header>
 <section id="errorIdSection">
   <span id="errorId"></span>
+  <span id="successId"></span>
 </section>
 
 <router-outlet></router-outlet>
