--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <nav class="navbar navbar-default navbar-static-top links">
     <div class="navbar-default" *ngIf="isLog.logValue">
       <ul class="nav navbar-nav" routerLinkActive="active">
-        <li class="nav-item"><a class="nav-link" routerLink="meetingList">Meetinglist</a></li>
-        <li class="nav-item"><a class="nav-link" routerLink="meeting">Create new meeting</a></li>
-        <li *ngIf="userDetails.isAdmin" class="nav-item"><a class="nav-link" routerLink="quarterMeetings">Graphical Design</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="meetingList" (click)="svgCleanUp()">Meetinglist</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="meeting" (click)="svgCleanUp()">Create new meeting</a></li>
+        <li *ngIf="userDetails.isAdmin" class="nav-item"><a class="nav-link" routerLink="quarterMeetings" (click)="svgCleanUp()">Graphical Design</a></li>
       </ul>
     </div>
   </nav>
