--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 footer {
-  position: absolute;
-  bottom: 0px;
+  /*position: absolute;*/
+  /*bottom: 0px;*/
   margin: 0px auto;
   width: 100%;
   border-bottom: 1px solid black;
