--- a/src/app/meeting/meeting.component.css
+++ b/src/app/meeting/meeting.component.css
@@ -1,3 +1,8 @@
+.container {
+  height: 673px;
+  width: 100% !important;
+}
+
 .Wrapper1 {
 
   border-left: 1px solid black;
@@ -6,7 +11,7 @@
   margin: 0 auto;
   background-color: #D7E9F4;
   padding: 10px;
-  height : 500px;
+  height : 660px;
   overflow-y: auto;
   /*width : 1100px;*/
 
